Commons 5.6 - Java 11 & Gradle 7.4.2 #7